infrastructures/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: kube-system
  name: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
        - k8s.short-d.com
      secretName: short-d.com-tls
  rules:
    - host: k8s.short-d.com
      http:
        paths:
          - backend:
              serviceName: kubernetes-dashboard
              servicePort: 443
